# pico

./: README.md
random_flashing/: CMakeLists.txt  build.sh  main.c
screen/buttons_w/: CMakeLists.txt
screen/buttons_w/display/Config/: Makefile
screen/buttons_w/display/Icm20948/: Makefile
screen/buttons_w/display/Infrared/: Makefile
screen/buttons_w/display/OLED/: Makefile
screen/buttons_w/display/pioasm/: CMakeCache.txt
screen/buttons_w/src/: main.c
screen/counter/: CMakeLists.txt
screen/counter/display/Fonts/: cmake_install.cmake
screen/counter/display/GUI/: GUI_Paint.c
screen/counter/display/pioasm/: Makefile
screen/counter/src/: main.c
screen/hw/: CMakeLists.txt
screen/hw/display/GUI/: cmake_install.cmake
screen/hw/display/LCD/: cmake_install.cmake
screen/hw/display/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
screen/hw/display/pioasm/: cmake_install.cmake
screen/hw/src/: main.c
screen/hw_w/display/Config/: cmake_install.cmake
screen/hw_w/display/Fonts/: Makefile
screen/hw_w/display/elf2uf2/boot_uf2_headers/: Makefile
screen/hw_w/src/: main.c
screen/snake/: deploy.sh
screen/snake/display/GUI/: Makefile
screen/snake/display/LCD/: Makefile
screen/snake/src/: main.c
screen/t/display/Icm20948/: cmake_install.cmake
screen/t/display/Infrared/: cmake_install.cmake
screen/t/display/OLED/: cmake_install.cmake
screen/t/display/elf2uf2/: CMakeCache.txt
screen/t/display/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
screen/t/src/: main.c
screen/testing/: CMakeLists.txt  main.c
screen/testing/elf2uf2/: Makefile  cmake_install.cmake
screen/testing/pioasm/: pioasm
test/: CMakeLists.txt  build.sh  deploy.sh  test.c
